[package]
name = "esp32c3-ral"
version = "0.1.0"
edition = "2021"
include = [
    "src/**",
    "build.rs",
    "Esp32c3.x"
]

[lib]
bench = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
ral-registers = "0.1.2"


[profile.release]
incremental = false
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
opt-level = "s"